kernel/include/core/lock.h

struct task_t;
extern struct task_t *proc_current(void);
/*
 * Global lock order contract (outermost -> innermost).
 * For the full driver-private lock contracts see
 * docs/drivers/guide/lock-order.md.
 *
 * Global order:
 *   cg_node.lock -> proc_lock -> runq_lock -> pfa.lock
 *   proc_lock -> park_lock
 *   proc_lock -> runq_lock
 *   proc_lock -> signal_state.lock
 *   park_lock -> signal_state.lock
 *   park_lock -> g_wait_timer_lock
 *   park_lock -> runq_lock
 *   proc_lock -> files_struct.lock -> VFS global-file/vnode locks
 *   proc_lock -> mm_struct.lock
 *   proc_lock -> a20_handle_table.lock
 *   driver registry/IRQ locks -> device-private locks
 *   g_lwip_lock -> g_net_lock
 *   g_lwip_lock -> virtio-net nonblocking send/recv paths only
 *
 * Rules:
 *
 * Lock-safe network entry points (see docs/network-lock-contract.md):
 * - a20_lwip_lock()/a20_lwip_unlock(): outer lock around all lwIP core calls.
 * - a20_lwip_poll_locked(): progress entry that runs with g_lwip_lock held;
 *   must not allocate, block, or acquire g_net_lock.
 * - a20_lwip_poll(): acquires g_lwip_lock, runs progress, releases it, then
 *   runs the socket bottom-half under g_net_lock only.
 * - lwIP callbacks run under g_lwip_lock and must only stage events into the
 *   preallocated per-PCB ring; allocation, enqueue, and wakeup happen in the
 *   bottom-half with g_net_lock held.
 * - Never acquire proc_lock while holding a runqueue lock. A local scheduler
 *   pick is runqueue-only and releases the runqueue lock before publishing the
 *   selected task under proc_lock.
 * - Never block while holding a spinlock or while interrupts are disabled.
 * - Do not call into VFS, memory allocation, or scheduler paths while holding a
 *   device or lwIP lock unless the callee is documented nonblocking.
 * - New locks must either fit this order or document a narrower local order in
 *   docs/drivers/guide/lock-order.md before use.
 */

typedef struct spinlock {
    volatile int locked;
    void *owner;        /* task_t * while held (always tracked) */
    uintptr_t owner_ra;
    const char *name;   /* debug name, NULL unless spin_set_debug() */
    void *container;
    /* Contention telemetry: incremented only when an acquire actually finds
     * the lock held, so the uncontended fast path is unchanged.  Read via
     * /proc/a20/lock_contention. */
    uint64_t contended_acquires;
    uint64_t contended_spins;
    /* Non-NULL only for locks registered for callsite sampling (see
     * lock_counters_enable_callsite()); the contended path records the
     * caller's return address so the audit can attribute contention. */
    struct lock_callsite_sample *samples;
} spinlock_t;
typedef struct lock_callsite_sample {
    uintptr_t ra;
    uint64_t contended;
    uint64_t spins;
} lock_callsite_sample_t;
static inline void spin_lock(spinlock_t *lock) {
    spin_lock_at(lock, (uintptr_t)__builtin_return_address(0));
}
static inline void spin_unlock(spinlock_t *lock) {
    lock->owner = NULL;
    lock->owner_ra = 0;
    __atomic_store_n(&lock->locked, 0, __ATOMIC_RELEASE);
}