kernel/include/proc/proc.h

struct signal_state;
struct files_struct;
struct vmo;
struct cg_node;
typedef struct mm_struct mm_struct_t;
typedef struct proc_fs_context {
    char cwd[MAX_PATH_LEN];
    char root_path[MAX_PATH_LEN];
    int  umask;
} proc_fs_context_t;
typedef struct proc_cred {
    int      uid;
    int      euid;
    int      suid;
    int      fsuid;
    int      gid;
    int      egid;
    int      sgid;
    int      fsgid;
    int      ngroups;
    int      groups[MAX_GROUPS];
    uint64_t cap_effective;
    uint64_t cap_permitted;
    uint64_t cap_inheritable;
    uint64_t cap_bounding;
} proc_cred_t;
#define CAP_SYS_ADMIN        21
typedef struct proc_limits {
    uint64_t stack;
    uint64_t nofile;
    uint64_t memlock;
} proc_limits_t;
typedef struct proc_policy {
    int oom_score_adj;
    int thp_disabled;
} proc_policy_t;
typedef struct proc_ns_context {
    char     fs_root[MAX_PATH_LEN];
    uint32_t net_ifindex;
    uint64_t pid_offset;
    uint32_t dev_access_mask;
    uint32_t active_ns;
} proc_ns_context_t;
typedef struct nommu_vfork_snap_entry {
    void   *dst;
    void   *data;
    size_t  size;
} nommu_vfork_snap_entry_t;
/*
 * Intrusive EEVDF runqueue node (kernel/proc/sched.c owns the tree code).
 * The per-CPU runqueue keeps normal tasks in a randomized (treap) BST ordered
 * by earliest virtual deadline and augmented with the subtree-minimum
 * vruntime so the eligible-gated pick can prune ineligible subtrees in
 * O(log n) instead of walking a sorted list.
 */
typedef struct eevdf_node {
    struct eevdf_node *left;
    struct eevdf_node *right;
    struct eevdf_node *parent;
    uint64_t min_vruntime;   /* min eevdf_vruntime within this subtree */
    uint32_t heap_prio;      /* treap heap key (smaller = closer to root) */
} eevdf_node_t;
typedef struct task_t {
    /*
     * Architecture context-switch assembly depends on these two offsets.
     * Keep them first and guard the layout with static assertions below.
     */
    uintptr_t kstack;
    void    *kstack_base;
    /* trap.S（riscv64）的内核态 sp 守卫在寄存器帧保存之前运行，不能破坏
     * 任何活寄存器；暂存槽放在任务结构体里，经 tp（内核态恒为当前
     * task_t，见 switch.S）寻址。守卫以固定偏移访问这些槽。 */
    uintptr_t trap_guard_scratch[7];
    refcount_t refs;
    int      destroy_started;
    int      pid;
    int      tgid;
    int      ppid;
    proc_state_t state;
    vaddr_t  ustack;
    pt_root_t *pgdir;
    trap_context_t *trap_ctx;
    int      exit_code;
    struct files_struct *files;
    proc_fs_context_t fs;
    int      vfs_open_errno;   /* specific error from the last failed vnode open */
    struct task_t *parent;
    /* Parent-children membership, kept in lockstep with ->parent under
     * proc_lock so wait4/reparent walk O(children) instead of the global
     * task list. */
    struct task_t *sibling_next;
    struct task_t **sibling_prev_ptr;
    struct task_t *children;
    /* Thread-group chain rooted at the leader (leader excluded from its own
     * tg_next chain); tg_leader is self for non-thread tasks. */
    struct task_t *tg_leader;
    struct task_t *tg_next;
    struct task_t **tg_prev_ptr;
    uint64_t wake_time;
    uint64_t alarm_expire;
    uint64_t itimer_real_interval;
    uint64_t itimer_values[3][4];
    int      priority;
    int      sched_level;
    unsigned cpu_id;
    int      on_rq;
    int      dispatching;
    int      on_cpu;
    unsigned owner_cpu;
    int      vfork_waiting;
#ifdef CONFIG_NOMMU
    /* A NOMMU vfork child shares writable memory until exec/exit. */
    nommu_vfork_snap_entry_t *nommu_vfork_snaps;
    int nommu_num_vfork_snapshots;
#endif
    struct task_t *rq_next;
    struct task_t *rq_prev;
    eevdf_node_t eevdf_node;  /* EEVDF runqueue treap membership (runq lock) */
    struct task_t *wait_next;
    uint64_t total_time;
    uint64_t utime_ticks;          /* scheduler ticks charged in user mode */
    uint64_t stime_ticks;          /* scheduler ticks charged in kernel mode */
    uint64_t start_jiffies;        /* creation time, 10 ms jiffies since boot */
    uint64_t child_utime;
    uint64_t child_stime;
    uint64_t exec_start;
    uint64_t ready_since;
    uint64_t perf_page_faults;     /* perf_event_open PERF_COUNT_SW_PAGE_FAULTS */
    uint64_t perf_page_faults_maj; /* faults that performed backing I/O */
    uint64_t perf_switches;        /* PERF_COUNT_SW_CONTEXT_SWITCHES */
    uint64_t user_gs_base;         /* x86_64 ARCH_SET_GS value (kernel GS is
                                    * reserved for per-CPU data) */
    uint32_t cfs_weight;
    uint32_t pi_boost_weight;    /* PI-futex waiter weight donation, atomic */
    uint64_t eevdf_vruntime;     /* weighted virtual run time (ticks) */
    uint64_t eevdf_deadline;     /* virtual deadline: vruntime + virtual slice */
    uint64_t eevdf_last_account; /* tick stamp of the last vruntime charge */
    int      sched_policy;
    int      sched_reset_on_fork;
    int      waiting_for_child;
    int      exit_pending;
    int      pending_exit_code;
    int      stop_report_pending;
    int      continue_report_pending;

    struct signal_state *signals;

    mm_struct_t *mm;

    uintptr_t entry;
    uintptr_t first_kernel_entry;
    vaddr_t   exec_load_addr;
    size_t    exec_load_size;

    int       pgid;
    int       sid;

    proc_limits_t limits;
    proc_cred_t   cred;
    proc_policy_t policy;
    int       clone_flags;
    int       exit_signal;
    int       pdeathsig;       /* PR_SET_PDEATHSIG: one-shot signal delivered
                                * when the parent exits (0 = none) */
    int      *clear_child_tid;
    uintptr_t robust_list_head;

    char      name[64];
    char      exec_path[MAX_PATH_LEN];
    struct task_t *pid_hash_next;
    struct task_t *all_next;
    struct task_t *all_prev;
    int       dynamic_alloc;
    void     *scratch_buf;
    size_t    scratch_size;
    void     *a20_ht;   /* Native ABI handle table (separate from scratch_buf,
                         * which is reused by Linux ABI I/O buffers) */
#if defined(CONFIG_ABI_NATIVE) || defined(CONFIG_ABI_BOTH)
    /* Native ABI standard handles (fd 0/1/2 + root/cwd/self) declared by the
     * libc via A20_SYS_task_adopt.  exec preserves them for native processes
     * so fork+exec keeps the caller's stdio (e.g. a pipeline read end). */
    uint32_t a20_stdin_h;
    uint32_t a20_stdout_h;
    uint32_t a20_stderr_h;
    uint32_t a20_root_h;
    uint32_t a20_cwd_h;
    uint32_t a20_self_h;
    int      a20_stdio_adopted;
#endif

    trap_context_t sig_saved_ctx;
    uint64_t       sig_blocked;
    uint64_t       sig_old_blocked;
    int            sig_handling;
    uint64_t       sigsuspend_old_blocked;
    int            sigsuspend_active;
    uint64_t       sigwait_mask;
    int            sigwait_active;
    arch_sigaltstack_t sigaltstack;
    uint64_t       thread_pending;

    /* Debug/tracing state (kernel/proc/debug.c).  Protected by proc_lock
     * for transitions; the tracer reads the snapshot fields only while the
     * tracee is in a ptrace stop (ptrace_stop_active), which the tracee
     * publishes under proc_lock before blocking. */
    struct task_t *ptracer;          /* observing task, or NULL */
    int            ptrace_orig_parent_pid; /* real parent pid, restored on detach */
    uint32_t       ptrace_flags;     /* PT_DEBUG_FLAG_* */
    int            ptrace_stop_active;
    int            ptrace_stop_kind; /* PT_DEBUG_STOP_* */
    int            ptrace_event;     /* PT_DEBUG_EVENT_*, 0 = none */
    uint64_t       ptrace_event_msg;
    int            ptrace_stop_sig;  /* signal reported by this stop */
    uint8_t        ptrace_siginfo[128]; /* siginfo snapshot of this stop */
    int            ptrace_siginfo_valid;
    int            ptrace_deliver_sig; /* one-shot no-re-stop signal */
    int            ptrace_ctx_valid;
    int            ptrace_exit_reported; /* zombie exit reported to an observer */
    trap_context_t ptrace_saved_ctx; /* regs snapshot at stop time */

    ARCH_TASK_FIELDS

    /* Native ABI support */
    uint32_t       abi_mode;        /* 0 = Linux ABI, 1 = Native ABI */
    struct vmo *stack_vmo;
    struct vmo *heap_vmo;
    proc_ns_context_t ns_ctx;

    /* Kernel keyring subsystem (kernel/ipc/keyring.c).  Owning reference to a
     * keyring object, shared with children at fork and released at teardown. */
    void           *session_keyring;

    /* Seccomp state (kernel/ipc/seccomp.c): SECCOMP_MODE_* plus a refcounted
     * newest-first classic-BPF filter chain shared with children at fork. */
    void           *seccomp_chain;
    uint32_t        seccomp_mode;

    /* Landlock LSM ruleset list (kernel/ipc/landlock.c), process-local. */
    void           *landlock_rulesets;

    /* Capability envelope (kernel/abi/linux/envelope.c): budgeted-capability
     * policy attached to this Linux-ABI process by its supervisor.  NULL =
     * unenveloped (the mediation fast path).  Survives fork (shared refcount)
     * and execve; a process cannot shed it.  See docs/research/05. */
    void           *envelope;

    /* Restartable sequences (rseq(2)): user-registered per-thread rseq area
     * and signature.  0 when not registered. */
    uintptr_t       rseq_area;
    uint32_t        rseq_sig;
    uint32_t        rseq_flags;

    /* Syscall-restart block (SYS_restart_syscall): nr+args recorded by the
     * dispatcher on the -ERESTARTSYS accepted-restart rewind, replayed by
     * SYS_restart_syscall, invalidated when any other syscall dispatches
     * first.  Not inherited across fork. */
    int             restart_active;
    uint64_t        restart_nr;
    uint64_t        restart_args[6];

    /* ioprio_get/ioprio_set(2): the encoded I/O priority (class<<13 | data). */
    int             ioprio;
    /* pkey_alloc/pkey_mprotect(2): allocated protection keys bitmap. */
    uint32_t        pkey_bitset;

    /* Cgroup resource control */
    struct cg_node *cgroup;
    uint32_t        cpus_allowed;
    int             cg_throttled;
    uint64_t        cg_cpu_start;

    completion_t vfork_done;

    /* Scheduler-private A20 park/wake state.  park_lock serializes the
     * transitions between PREPARING/PARKED/WOKEN and IDLE plus the timer
     * register/cancel (park_lock -> timer_heap lock) and the runqueue
     * enqueue in the wake path (park_lock -> runq lock).  It must never be
     * held while acquiring proc_lock; proc_lock protects the task list,
     * fork/exit/wait and the context-switch publication, not this state. */
    spinlock_t         park_lock;
    uint64_t           wait_seq;
    uint64_t           wait_deadline;
    int                wait_timer_index;
    int                alarm_timer_index;
    proc_park_state_t  park_state;
    proc_wait_mode_t   wait_mode;
    proc_wake_reason_t wake_reason;
} task_t;
static inline int proc_has_cap(const task_t *t, int cap)
{
    if (!t) return 1;
    if (cap < 0 || cap >= 64) return 0;
    return (t->cred.cap_effective & (1ULL << cap)) != 0;
}